--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
   }
 
   .form-inputs{
-    @apply border-red-600 border-b pl-6 focus:outline-none w-full;
+    @apply border-red-600 bg-transparent border-b pl-6 focus:outline-none w-full;
   }
 }
 
