Mudanca no layout do dropdown menu

--- a/src/layouts/Header/style.css
+++ b/src/layouts/Header/style.css
@@ -1,9 +1,9 @@
-.submenu{
+.dropdownMenu{
     opacity: 0;
     transition: opacity 0.3s ease-in-out 0s;
 }
 
-.showSubmenu{
+.showDropdownMenu{
     opacity: 1;
 }
 
