--- a/src/layouts/Header/style.css
+++ b/src/layouts/Header/style.css
@@ -1,10 +1,12 @@
 .dropdownMenu{
     opacity: 0;
+    visibility: hidden;
     transition: opacity 0.3s ease-in-out 0s;
 }
 
 .showDropdownMenu{
     opacity: 1;
+    visibility: visible;
 }
 
 .catalogArrow{
