Adicao de estados para controle do dropdown menu

--- a/src/layouts/Header/style.css
+++ b/src/layouts/Header/style.css
@@ -18,10 +18,10 @@
     transform: rotate(180deg);
 }
 
-.submenu{
+.categoriesList{
     display: none;
 }
 
-.showSubmenu{
+.showCategoriesList{
     display: flex;
 }
