--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -2,22 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components{
-  .categories-btn{
-    @apply text-white w-full text-4xl font-bold bg-[radial-gradient(circle,_#000000bd,_transparent_80%)] hover:backdrop-blur-sm;
-  }
+@layer components {
+	.categories-btn {
+		@apply text-white w-full text-4xl font-bold bg-[radial-gradient(circle,_#000000bd,_transparent_80%)] hover:backdrop-blur-sm;
+	}
 
-  .form-inputs{
-    @apply border-red-600 bg-transparent border-b pl-6 placeholder-red-600 placeholder:font-bold focus:outline-none w-full;
-  }
+	.form-inputs {
+		@apply border-red-600 bg-transparent border-b pl-6 placeholder-red-600 placeholder:font-bold focus:outline-none w-full;
+	}
 
-  .catalog-items{
-    @apply flex items-center gap-x-1 hover:pl-2 transition-all hover:cursor-pointer;
-  }
+	.catalog-items {
+		@apply flex items-center gap-x-1 transition-transform hover:translate-x-2 cursor-pointer;
+	}
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
