--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -11,7 +11,7 @@
 		@apply border-red-600 bg-transparent border-b pl-6 placeholder-red-600 placeholder:font-bold focus:outline-none w-full;
 	}
 
-	.catalog-items {
+	.menu-items {
 		@apply flex items-center gap-x-1 transition-transform hover:translate-x-2 cursor-pointer;
 	}
 }
