--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -14,6 +14,10 @@
 	.menu-items {
 		@apply flex items-center gap-x-1 transition-transform hover:translate-x-2 cursor-pointer;
 	}
+
+	.account-options{
+		@apply border-2 rounded-md px-4 py-2 text-sm md:text-base border-black hover:bg-black hover:text-white transition-colors;
+	}
 }
 
 * {
