Atualizacao do script para adicao dos produtos ao firebase

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -20,7 +20,7 @@
 	}
 
 	.product-inputs{
-		@apply px-2 py-1 lg:py-2 border-2 border-black rounded-sm font-bold text-red-700;
+		@apply px-2 py-1 lg:py-2 border-2 border-black rounded-sm font-bold text-gray-800 placeholder-red-600;
 	}
 }
 
