--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -7,8 +7,8 @@
 		@apply flex items-center justify-center w-full text-white text-4xl font-bold bg-[radial-gradient(circle,_#000000bd,_transparent_80%)] hover:backdrop-blur-sm;
 	}
 
-	.form-inputs {
-		@apply border-red-600 bg-transparent border-b pl-6 placeholder-red-600 placeholder:font-bold focus:outline-none w-full;
+	.account-inputs {
+		@apply border-b border-red-600 bg-transparent pl-6 placeholder-red-600 placeholder:font-bold focus:outline-none w-full;
 	}
 
 	.menu-items {
@@ -16,11 +16,11 @@
 	}
 
 	.account-options{
-		@apply border-2 rounded-md px-4 py-2 text-sm md:text-base border-black hover:bg-black hover:text-white transition-colors;
+		@apply w-60 border-2 rounded-md px-4 py-2 text-sm md:text-base border-black hover:bg-black hover:text-white transition-colors;
 	}
 
-	.product-inputs{
-		@apply px-2 py-1 lg:py-2 border-2 border-black rounded-md font-bold text-gray-800 placeholder-red-600 bg-white;
+	.default-inputs{
+		@apply px-2 py-1 border-2 border-black rounded-md font-bold text-gray-800 bg-white;
 	}
 }
 
